CSS: prevent overflow of fields in the requirement (#1398)
* export/html: requirement.CSS: prevent overflow of fields in the requirement with long strings without breaks

Closes #1394

* export/html:  CSS:  update autogen

with respect to the specifics of table view

--- a/strictdoc/export/html/_static/autogen.css
+++ b/strictdoc/export/html/_static/autogen.css
@@ -16,6 +16,7 @@ div.document {
 
 sdoc-autogen div.document {
   display: contents;
+  border: none;
 }
 
 /* Table */
